--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,9 @@
 @import-normalize; /* bring in normalize.css styles */
 
 body {
-  margin: 0;
+  max-width: 1280px;
+  margin-left: auto;
+  margin-right: auto;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
